--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -13,7 +13,35 @@
     // padding: 20px;
   }
 }
+//
+// .list-tree .file {
+//     line-height: 1.4em;
+// }
+// .list-tree .file.selected::before {
+//     height: 2.2em;
+// }
+//
+// .tree-view .list-item {
+//     line-height: 1.8em;
+// }
+// .tree-view .selected:before {
+//     height: 1.8em;
+// }
 
+
+// .list-group li.list-nested-item::before {
+//     height: 1.8em;
+// }
+// .list-group li.list-nested-item > .list-item,
+// .list-tree li.list-nested-item > .list-item {
+//     line-height: 1.4em;
+// }
+//
+// .list-group li:not(.list-nested-item),
+// .list-tree li:not(.list-nested-item) {
+//     line-height: 1.4em;
+// }
+//
 
 .focusable-panel {
   opacity: 1;
