--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -14,7 +14,7 @@
 @yellow: rgb(220,205,105);
 @red: rgb(206,64,69);
 @purple: rgb(160,116,196);
-@background: rgb(21,23,24);
+@background: rgb(39, 40, 34); // Phoenix Eighties (#272822)
 @text: #aaa;
 
 @ui-site-color-1: @blue;
@@ -65,7 +65,7 @@
 
 
 // TREE VIEW / SIDEBAR
-@tree-view-background-color: rgb(16,17,18);
+@tree-view-background-color: #232323; // Phoenix Eighties
 @tree-view-border-color: @tool-panel-border-color;
 
 @scrollbar-background-color: rgba(42, 42, 42, 0.5);
